public/css/style.css
/* ... */
#popularTags > .placeholder {
    width: 30%;
    margin-bottom: 5px;
}

.searchBar {
    display: flex;
    justify-content: center;
}

li {
    list-style-type: none;
}

ul {
    padding: 0;
    margin: 0;
}

.barContainer {
    width: 60%;
}

.barContainer > input {
    width: 80%;
}

.barContainer > button {
    width: 15%;
}
/* PhotoView Modal CSS*/

#modal {
    margin: auto;
}

.imageContainer {
    background-color: darkgray;
    text-align: center;
    padding: 1rem;
    margin-bottom: 1rem;
}

img {
    width: 30rem;
}

.icon {
    width: 50px;
    border-radius: 50px;
}

.photoCardFooter {
    display: flex;
    justify-content: space-between;
}

.photoCard {
    background-image: url("../images/seoul.jpeg");
}

/* .purchaseButton {
    vertical-align: bottom;
    padding: 10px;
}

.purchaseButton > a {
    background: #2185d0 0% 0% no-repeat padding-box;
    border-radius: 4px;
    opacity: 1;
    padding: 10px;
    color: white;
    text-decoration: none;

    text-align: center;
    font: normal normal bold 14px/17px Lato;
    letter-spacing: 0px;
} */

#sectionTwo {
    display: flex;
}

#sectionTwo > * {
    width: 50%;
}

#topContainer {
    background: url("../images/corgi-wallpaper-2560x1080.jpg"),
        rgba(50, 50, 50, 0.5);
    background-blend-mode: multiply;
    height: 80vh;
    background-position: center;
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 0.5rem;
    margin-bottom: 3.5rem;
}

#topContainer > * {
    width: 100%;
    text-align: center;
}

#callToAction {
    color: white;
    font-size: xx-large;
}

#callToActionSecondary {
    color: white;
    font-size: large;
}

.imageInfo {
    display: flex;
    justify-content: space-around;
}

.leftContainer {
    display: flex;
    flex-direction: column;
}

.leftContainer > * {
    margin-bottom: 0.5rem;
}

#descriptorContainer > * {
    margin-bottom: 0.2rem;
}

/* Homepage Styling */

.placeholder > a > img {
    width: 100%;
}

#popularTags {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

#popularImages {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

#popularImages > .photoCard {
    width: 30%;
    margin-bottom: 5px;
}

#popularTags > .placeholder {
    width: 30%;
    margin-bottom: 5px;
}

.searchBar {
    display: flex;
    justify-content: center;
}

li {
    list-style-type: none;
}

ul {
    padding: 0;
    margin: 0;
}

.barContainer {
    width: 60%;
}

.barContainer > input {
    width: 80%;
}

.barContainer > button {
    width: 15%;
}
/* PhotoView Modal CSS*/

#modal {
    margin: auto;
}

.imageContainer {
    background-color: darkgray;
    text-align: center;
    padding: 1rem;
    margin-bottom: 1rem;
}

img {
    width: 30rem;
}

.icon {
    width: 50px;
    border-radius: 50px;
}

.photoCardFooter {
    display: flex;
    justify-content: space-between;
}

.photoCard {
    background-image: url("../images/seoul.jpeg");
}

/* .purchaseButton {
    vertical-align: bottom;
    padding: 10px;
}

.purchaseButton > a {
    background: #2185d0 0% 0% no-repeat padding-box;
    border-radius: 4px;
    opacity: 1;
    padding: 10px;
    color: white;
    text-decoration: none;

    text-align: center;
    font: normal normal bold 14px/17px Lato;
    letter-spacing: 0px;
} */

#sectionTwo {
    display: flex;
}

#sectionTwo > * {
    width: 50%;
}

#topContainer {
    background: url("../images/corgi-wallpaper-2560x1080.jpg"),
        rgba(50, 50, 50, 0.5);
    background-blend-mode: multiply;
    height: 80vh;
    background-position: center;
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 0.5rem;
    margin-bottom: 3.5rem;
}

#topContainer > * {
    width: 100%;
    text-align: center;
}

#callToAction {
    color: white;
    font-size: xx-large;
}

#callToActionSecondary {
    color: white;
    font-size: large;
}

.imageInfo {
    display: flex;
    justify-content: space-around;
}

.leftContainer {
    display: flex;
    flex-direction: column;
}

.leftContainer > * {
    margin-bottom: 0.5rem;
}

#descriptorContainer > * {
    margin-bottom: 0.2rem;
}

.dropdown > * {
    color: rgb(246, 244, 244);
}

.homepageDropdown {
    width: 100%;
}

/* Nav Bar */

header {
    position: sticky;
}

nav {
    display: flex;
}

nav .btnPrimary {
    margin-left: 5px;
    margin-right: 5px;
}

nav > * {
    margin-right: 1rem;
}
li {
    list-style-type: none;
}

#siteLogo {
    width: 200px;
}

#menuBar {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* nav li a {
    text-decoration: none;
    background-color: lightgray;
    color: rgb(82, 82, 82);
    padding: 0.8rem;
    border-radius: 10px;
} */

.profilePicIcon {
    height: 50px;
    width: 50px;
    border-radius: 100px;
}

#navUserInfo {
    display: flex;
    align-items: center;
}

#navUserInfo > * {
    margin-right: 0.5rem;
}

